# data-engineering-project-practice

./: README.md
projects/brazillian_e_commerce/: OUTPUTS.docx  pyproject.toml
projects/brazillian_e_commerce/src/brazillian_e_commerce/: main.py
projects/brazillian_e_commerce/src/brazillian_e_commerce.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projects/brazillian_e_commerce/src/brazillian_e_commerce/bronze/: ingest.py  run_bronze.py
projects/brazillian_e_commerce/src/brazillian_e_commerce/config/: tables.yaml
projects/brazillian_e_commerce/src/brazillian_e_commerce/final/: run_final.py  transform_sales_performance.py
projects/brazillian_e_commerce/src/brazillian_e_commerce/gold/: model.py  run_gold.py
projects/brazillian_e_commerce/src/brazillian_e_commerce/mart/: builders.py  mart_runner.py  transform_customer_analytics.py  transform_customer_satisfaction_and_reviews.py  transform_order_delivery_summary.py  transform_payment_analytics.py  transform_product_category_performance.py  transform_sales_performance.py  transform_seller_performance.py
projects/brazillian_e_commerce/src/brazillian_e_commerce/olist_de.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projects/brazillian_e_commerce/src/brazillian_e_commerce/silver/: refine.py  run_silver.py  transform_customers.py  (+3 more)
projects/practice-project/: README.md  pyproject.toml
projects/practice-project/notebook/: de_project.ipynb
projects/practice-project/src/: .gitignore
projects/practice-project/src/de_project/: main.py
projects/practice-project/src/tests/: test_config_local.py
(+54 files in other folders)
